--- a/loRa设备数据帧格式(2019.4.17).md
+++ b/loRa设备数据帧格式(2019.4.17).md
@@ -280,11 +280,11 @@ FE E013 05 C003 55 01 02 D6 0D0A0D0A0D0A
 
 #### 协议帧格式，具体设备查看4
 
-|   字节索引   |       N/A       |   N/A    |     N/A      |     0     |  1\|2   |    3    |     4\|5     |      6      |   7    |    8    |    9    |  10  |       11-1        |
-| :----------: | :-------------: | :------: | :----------: | :-------: | :-----: | :-----: | :----------: | :---------: | :----: | :-----: | :-----: | :--: | :---------------: |
-|    数据域    | DeviceFrameHead |   Addr   | deviceOthers | FrameHead | FrameId | DataLen | DeviceTypeId | IsBroadcast | ZoneId | GroupId | channel | CRC8 |     FrameEnd      |
-| 长度（byte） |        1        |    4     |      3       |     1     |    2    |    1    |      2       |      1      |   1    |    1    |    1    |  1   |         6         |
-|   示例数据   |       61        | 00000071 |   00 XXXX    |    FE     |  A014   |   06    |     5555     |     55      |   01   |   01    |   00    |  00  | 0D 0A 0D 0A 0D 0A |
+|   字节索引   |       N/A       |   N/A    |     N/A      |     0     |  1\|2   |    3    |     4\|5     |      6      |   7    |    8    |  9   |       10-15       |
+| :----------: | :-------------: | :------: | :----------: | :-------: | :-----: | :-----: | :----------: | :---------: | :----: | :-----: | :--: | :---------------: |
+|    数据域    | DeviceFrameHead |   Addr   | deviceOthers | FrameHead | FrameId | DataLen | DeviceTypeId | IsBroadcast | ZoneId | channel | CRC8 |     FrameEnd      |
+| 长度（byte） |        1        |    4     |      3       |     1     |    2    |    1    |      2       |      1      |   1    |    1    |  1   |         6         |
+|   示例数据   |       61        | 00000071 |   00 XXXX    |    FE     |  A014   |   06    |     5555     |     55      |   01   |   00    |  00  | 0D 0A 0D 0A 0D 0A |
 
 协议帧各字段域说明：
 
@@ -298,7 +298,6 @@ FE E013 05 C003 55 01 02 D6 0D0A0D0A0D0A
 | DataLen         | 数据长度   |      1       | 从此位后开始计算（不包含自身），一直到`CRCR8`位结束（不包括CRC8位） |
 | DeviceTypeId    | 设备类型ID |      2       | 查看设备类型对照表（5555：所有类型）                         |
 | ZoneId          | 所属区域Id |      1       | 0x55表示所有区域                                             |
-| GroupId         | 组id       |      1       |                                                              |
 | channel         | 查询角色   |      1       | 0x00：表示主控，0x55表示所有，其他表示相应路数的子设备       |
 | CRC8            | CRC8校验码 |      1       | 用于进行CRC8计算的数据DataLen指代的长度                      |
 | FrameEnd        | 帧尾       |      6       | 0D0A0D0A0D0A                                                 |
